[gd_scene load_steps=7 format=3 uid="uid://g8od13j8vo5k"]

[ext_resource type="Script" uid="uid://b821osoenppd8" path="res://weapon.gd" id="1_swcir"]

[sub_resource type="BoxMesh" id="BoxMesh_div1a"]

[sub_resource type="BoxShape3D" id="BoxShape3D_swcir"]

[sub_resource type="Animation" id="Animation_o2wld"]
resource_name = "attack"
length = 0.2755
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13299713, 0.27512652),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.6711876), Vector3(0, 0, -0.8656833), Vector3(0, 0, -1.6711876)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13299713, 0.27512652),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.3310914, 0), Vector3(-0.335, 0.331, 0), Vector3(0, 0.3310914, 0)]
}

[sub_resource type="Animation" id="Animation_8xwfw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -1.6711876)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.3310914, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fy1u"]
_data = {
&"RESET": SubResource("Animation_8xwfw"),
&"attack": SubResource("Animation_o2wld")
}

[node name="Weapon" type="Node3D"]
script = ExtResource("1_swcir")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.10022277, 0.052866805, 0, -0.994965, -0.0053252704, 0, 0, 0, 0.04495083, 0, 0.3310914, 0)
mesh = SubResource("BoxMesh_div1a")

[node name="hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.52552396, 0.38236195, -0.072429895)
shape = SubResource("BoxShape3D_swcir")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_3fy1u")
}

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
